2002-03-9  Jonas Christian Drewsen  <drewsen@mmm>

	* Bugfixes
	Fixed crashes for depths other that 16 bpp
	Fixed messed up paddle during CUT and other
	sequences

	* Features
	Added --no-audio option flag
	
2002-02-18  Mads Bondo Dydensborg  <madsdyd@ripley>

	* CREDITS
	Changed a couple of words

	* TODO
	Cleaned up file a bit

	* SLD_MapRGB
	It seems the SDL_MapRGB stuff in surfacemanager.cc has completly
	fixed the menu transparency and screenshot problems - at least on
	my system.

2002-02-08  Mads Bondo Dydensborg  <madsdyd@ripley>

	* RPM
	Simplified the RPM build script
	Bumped the version number
	Added a couple of requirements
	Fixed autoconf python problem

2002-01-17  Mads Bondo Dydensborg  <madsdyd@ripley>

	* Version
	Bumped version to 0.3.5

	* Bug
	Small python bug fix by Samuel Listopad II

2002-01-13  Mads Bondo Dydensborg  <madsdyd@ripley>

	* mingw
	More mingw support from Samuel Listopad II

	* gcc3
	Tried to add gcc3 support, may or may not work.

2002-01-11  Mads Bondo Dydensborg  <madsdyd@ripley>

	* mingw
	minWG support have been added, thanks to Samuel Listopad II

2001-12-30  Mads Bondo Dydensborg  <madsdyd@ripley>

	* Console
	Added a black background when console is down.

2001-12-22  Mads Bondo Dydensborg  <madsdyd@ripley>

	* TabCompletion
	Added tab completion code to the console.

2001-12-18  Mads Bondo Dydensborg  <madsdyd@ripley>

	* Removing
	Removed a lot of files not used anymore. Version is 0.3.4 -
	tagging.

	* DrawText
	Removed all usage of the DrawText API. Bumped version number to
	0.3.3. Still needs to remove a number of files from the cvs.

	* Version
	Bumped the version number to 0.3.2.

	* Console
	Removed the old console code. Still uses the DT_DrawText stuff,
	but not for long. 7 files added. Console is not as functional as
	the old one, but a lot faster.

2001-12-22  Mads Bondo Dydensborg  <madsdyd@ripley>

	* TabCompletion
	Added tab completion code to the console.
